[gd_scene load_steps=15 format=3 uid="uid://b7o2r2hgpxo7e"]

[ext_resource type="Texture2D" uid="uid://bpsh6qyhxu3p5" path="res://assets/sprites/Puzles/puzle4_fotos/fotos_estanterias_vacia_240x135.png" id="1_5h2ek"]
[ext_resource type="Script" path="res://scripts/puzzle/puzzle_fotos_estanteria.gd" id="1_vdajd"]
[ext_resource type="Texture2D" uid="uid://pj65hci8gy3s" path="res://assets/sprites/Puzles/puzle4_fotos/fotos_estanterias_240x135.png" id="2_ht76q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d8k48"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_64x2g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b2a6n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p8qk0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6rapp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_exc0r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2eljc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0n7y4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uske8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y1ra2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1vroj"]

[node name="PuzzleFotosEstanteria" type="CanvasLayer"]
script = ExtResource("1_vdajd")

[node name="FotosEstanteriasVacia240x135" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5h2ek")

[node name="FotosEstanterias240x135" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ht76q")

[node name="FrancescoFotoButton" type="Button" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 177.0
offset_right = -660.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_d8k48")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_64x2g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b2a6n")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_p8qk0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6rapp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_exc0r")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2eljc")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0n7y4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uske8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_y1ra2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1vroj")

[node name="MarioFotoButton" type="Button" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 352.0
offset_top = 181.0
offset_right = -348.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_d8k48")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_64x2g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b2a6n")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_p8qk0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6rapp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_exc0r")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2eljc")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0n7y4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uske8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_y1ra2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1vroj")

[node name="FotoRotaButton" type="Button" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 660.0
offset_top = 177.0
offset_right = -40.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_d8k48")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_64x2g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b2a6n")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_p8qk0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6rapp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_exc0r")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2eljc")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0n7y4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uske8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_y1ra2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1vroj")

[connection signal="pressed" from="FrancescoFotoButton" to="." method="_on_francesco_foto_button_pressed"]
[connection signal="pressed" from="MarioFotoButton" to="." method="_on_mario_foto_button_pressed"]
[connection signal="pressed" from="FotoRotaButton" to="." method="_on_foto_rota_button_pressed"]
